# juce-plugin-template

./: .gitignore  AGENTS.md  CMakeLists.txt  TemplateMod  prompt.txt
source/: PluginConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: PluginDSP.cpp  PluginDSP.h
source/parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
source/ui/lookandfeel/: PluginLookAndFeel.cpp  PluginLookAndFeel.h
